--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -55,7 +55,6 @@
         android:id="@+id/weather_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/details_window"
         app:layout_constraintEnd_toEndOf="@+id/details_window"
         app:layout_constraintStart_toStartOf="@+id/details_window"
@@ -78,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:layout_marginBottom="16dp"
-        android:text="Georgia"
+        android:text=""
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/current_weather_icon"
         app:layout_constraintEnd_toEndOf="@+id/current_weather_icon"
