--- a/app/src/main/res/layout/fragment_weather_history.xml
+++ b/app/src/main/res/layout/fragment_weather_history.xml
@@ -1,14 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WeatherHistoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/weather_history_text" />
+    <ImageView
+        android:id="@+id/london_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/uk"
+        app:layout_constraintEnd_toStartOf="@+id/jamaica_icon"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/georgia_icon"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/jamaica_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/london_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/london_icon"
+        app:layout_constraintTop_toTopOf="@+id/london_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/jamaica"
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <ImageView
+        android:id="@+id/georgia_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/georgia"
+        app:layout_constraintBottom_toBottomOf="@+id/london_icon"
+        app:layout_constraintEnd_toStartOf="@+id/london_icon"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/london_icon"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <TextView
+        android:id="@+id/city_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Tbilisi"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/london_icon" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
