--- a/app/src/main/res/layout/weather_history_item.xml
+++ b/app/src/main/res/layout/weather_history_item.xml
@@ -1,26 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/date_text_view_id"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/weather_icon_id"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="16dp"/>
 
     <TextView
         android:id="@+id/temperature_text_view_id"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="16dp"/>
 
     <TextView
         android:id="@+id/weather_description_id"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:textSize="16sp"
+        android:layout_marginLeft="16dp"/>
 </LinearLayout>
