--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -58,7 +58,8 @@
         app:layout_constraintBottom_toTopOf="@+id/details_window"
         app:layout_constraintEnd_toEndOf="@+id/details_window"
         app:layout_constraintStart_toStartOf="@+id/details_window"
-        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />
+        app:layout_constraintTop_toBottomOf="@+id/current_temperature"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/current_temperature"
@@ -70,7 +71,8 @@
         app:layout_constraintBottom_toTopOf="@+id/weather_description"
         app:layout_constraintEnd_toEndOf="@+id/weather_description"
         app:layout_constraintStart_toStartOf="@+id/weather_description"
-        app:layout_constraintTop_toBottomOf="@+id/current_weather_icon" />
+        app:layout_constraintTop_toBottomOf="@+id/current_weather_icon"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/city_name"
@@ -82,7 +84,8 @@
         app:layout_constraintBottom_toTopOf="@+id/current_weather_icon"
         app:layout_constraintEnd_toEndOf="@+id/current_weather_icon"
         app:layout_constraintStart_toStartOf="@+id/current_weather_icon"
-        app:layout_constraintTop_toBottomOf="@+id/london_icon" />
+        app:layout_constraintTop_toBottomOf="@+id/london_icon"
+        android:textColor="@color/white"/>
 
     <ScrollView
         android:id="@+id/details_window"
@@ -115,7 +118,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:text="@string/details"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    android:textColor="@color/white" />
             </TableRow>
 
             <TableRow
@@ -131,7 +135,8 @@
                     android:text="@string/temperature"
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    tools:layout_editor_absoluteY="0dp"
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/temperature_value"
@@ -142,7 +147,8 @@
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
                     tools:layout_editor_absoluteY="0dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
             </TableRow>
 
             <TableRow
@@ -158,7 +164,8 @@
                     android:text="@string/feels_like"
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    tools:layout_editor_absoluteY="0dp"
+                    android:textColor="@color/white"/>
 
                 <TextView
                     android:id="@+id/feels_like_value"
@@ -169,7 +176,8 @@
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
                     tools:layout_editor_absoluteY="0dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
             </TableRow>
 
             <TableRow
@@ -185,7 +193,8 @@
                     android:text="@string/humidity"
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    tools:layout_editor_absoluteY="0dp"
+                    android:textColor="@color/white"/>
 
                 <TextView
                     android:id="@+id/humidty_value"
@@ -196,7 +205,8 @@
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
                     tools:layout_editor_absoluteY="0dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
             </TableRow>
 
             <TableRow
@@ -212,7 +222,8 @@
                     android:text="@string/pressure"
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
-                    tools:layout_editor_absoluteY="0dp" />
+                    tools:layout_editor_absoluteY="0dp"
+                    android:textColor="@color/white"/>
 
                 <TextView
                     android:id="@+id/pressure_value"
@@ -223,7 +234,8 @@
                     android:textSize="16sp"
                     tools:layout_editor_absoluteX="87dp"
                     tools:layout_editor_absoluteY="0dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
             </TableRow>
 
 
