--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,34 +11,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/firstButton"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_bar_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <ImageView
-        android:id="@+id/firstButton"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/bottom_bar_id"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:src="@drawable/today"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/secondButton"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/white" />
-
-    <ImageView
-        android:id="@+id/secondButton"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:src="@drawable/hourly"
-        android:text="@string/weather_history"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/firstButton"
-        app:layout_constraintTop_toTopOf="@+id/firstButton"
-        app:tint="@color/white" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/night_color">
+
+        <ImageView
+            android:id="@+id/firstButton"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.5"
+            android:src="@drawable/today"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_bar_id"
+            app:layout_constraintEnd_toStartOf="@+id/secondButton"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@id/bottom_bar_id"
+            app:layout_constraintTop_toBottomOf="@+id/viewPager"
+            app:tint="@color/white" />
+
+        <ImageView
+            android:id="@+id/secondButton"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.5"
+            android:src="@drawable/hourly"
+            android:text="@string/weather_history"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_bar_id"
+            app:layout_constraintEnd_toEndOf="@id/bottom_bar_id"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/firstButton"
+            app:layout_constraintTop_toTopOf="@+id/firstButton"
+            app:tint="@color/white" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
