--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -59,7 +59,8 @@
         app:layout_constraintEnd_toEndOf="@+id/details_window"
         app:layout_constraintStart_toStartOf="@+id/details_window"
         app:layout_constraintTop_toBottomOf="@+id/current_temperature"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/current_temperature"
