--- a/app/src/main/res/layout/fragment_weather_history.xml
+++ b/app/src/main/res/layout/fragment_weather_history.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WeatherHistoryFragment">
+    tools:context=".WeatherHistoryFragment"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/london_icon"
@@ -65,7 +66,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/city_name"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
